corpus/c/asm_inline/case-01/snapshots/gcc15_plus/dual_sink_structured/render.verbose.txt
error: inline assembly constraint error
--> src/main.c:3:5
help: check the asm constraint letters and ensure registers/operands match the template
why: impossible constraint in ‘asm’
| src/main.c:3:5
|     __asm__("" : : "i"(value));
|     ^
debug: rule_id=rule.family.asm_inline.message_terms
debug: matched_conditions=message_contains=impossible constraint in, phase=codegen
warning: inline assembly constraint error
--> src/main.c:3:5
help: check the asm constraint letters and ensure registers/operands match the template
why: ‘asm’ operand 0 probably does not match constraints
| src/main.c:3:5
|     __asm__("" : : "i"(value));
|     ^
debug: rule_id=rule.family.asm_inline.message_terms
debug: matched_conditions=message_contains=does not match constraints, phase=codegen
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output